xrd/sys/xrdesktop/src/xrd-input-synth.h

G_BEGIN_DECLS

#define XRD_TYPE_INPUT_SYNTH xrd_input_synth_get_type()
/**
 * XrdClickEvent:
 * @window: The #XrdWindow that was clicked.
 * @position: A #graphene_point_t 2D screen position for the click.
 * @button: The #int identifier of the mouse button.
 * @state: A #gboolean that is %TRUE when pressed and %FALSE when released.
 * @controller_handle: A #guint64 with the OpenVR handle to the controller.
 *
 * A 2D mouse click event.
 **/
typedef struct {
  XrdWindow        *window;
  graphene_point_t *position;
  InputSynthButton  button;
  gboolean          state;
  GxrController    *controller;
} XrdClickEvent;
/**
 * XrdMoveCursorEvent:
 * @window: The #XrdWindow on which the cursor was moved.
 * @position: A #graphene_point_t with the current 2D screen position.
 * @ignore: A #gboolean wheather the synthesis should be ignored.
 *
 * A 2D mouse move event.
 *
 * Ignoring this events means only updating the cursor position in VR so it
 * does not appear frozen, but don't actually synthesize mouse move events.
 *
 **/
typedef struct {
  XrdWindow *window;
  graphene_point_t *position;
  gboolean ignore;
} XrdMoveCursorEvent;
XrdInputSynth *
xrd_input_synth_new (void);
void
xrd_input_synth_reset_scroll (XrdInputSynth *self);
void
xrd_input_synth_reset_press_state (XrdInputSynth *self);
void
xrd_input_synth_move_cursor (XrdInputSynth    *self,
                             XrdWindow *window,
                             graphene_matrix_t *controller_pose,
                             graphene_point3d_t *intersection);
GxrActionSet*
xrd_input_synth_create_action_set (XrdInputSynth *self, GxrContext *context);