xrd/sys/xrdesktop/src/xrd-window.h

void
xrd_window_add_child (XrdWindow *self,
                      XrdWindow *child,
                      graphene_point_t *offset_center);
gboolean
xrd_window_is_selected (XrdWindow *self);
void
xrd_window_set_flip_y (XrdWindow *self,
                       gboolean flip_y);
void
xrd_window_set_color (XrdWindow *self, const graphene_vec3_t *color);
void
xrd_window_set_pin (XrdWindow *self,
                    gboolean pinned,
                    gboolean hide_unpinned);
gboolean
xrd_window_is_pinned (XrdWindow *self);
void
xrd_window_close (XrdWindow *self);